test/parse/bad-string-unicode-escape-unallowed.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func) (export "foo\u{d900}bar" (func 0)))
(;; STDERR ;;;
out/test/parse/bad-string-unicode-escape-unallowed.txt:3:28: error: bad escape "\u{d900}"
(module (func) (export "foo\u{d900}bar" (func 0)))
                           ^^^^^^^^
out/test/parse/bad-string-unicode-escape-unallowed.txt:3:24: error: unexpected token "Invalid", expected a quoted string (e.g. "foo").
(module (func) (export "foo\u{d900}bar" (func 0)))
                       ^^^^^^^^^^^^^^^^
out/test/parse/bad-string-unicode-escape-unallowed.txt:3:47: error: unexpected token 0, expected ).
(module (func) (export "foo\u{d900}bar" (func 0)))
                                              ^
;;; STDERR ;;)
